# word-manifold

./: .cursorignore  .gitignore  .rayignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cog.yaml  dev_watch.py  docker-compose.yml  evolving_mandala_viewer.py  mkdocs.yml  predict.py  pyproject.toml  ray_config.yaml  sacred_audiovis_job.yaml  setup.py
.cog/tmp/build20250424195045.661986/: cog-0.14.7-py3-none-any.whl
.cog/tmp/build20250424201438.383586/: requirements.txt
.github/workflows/: deploy.yml  test.yml
data/01JSPY8QJ1S63YCQ4W961DHN0Z/: index  meta.json
data/01JSPY8QJ1S63YCQ4W961DHN0Z/chunks/: 000001
data/01JSQCJSCF5NV795AREKG392D2/: index  meta.json
data/01JSQCJSCF5NV795AREKG392D2/chunks/: 000001
data/01JSQKBXE8XRDDM6WN6Z4WJ8SF/: index  meta.json
data/01JSQKBXE8XRDDM6WN6Z4WJ8SF/chunks/: 000001
data/01JSQKBXMJZ4RHVCWWH8JVH4C2/: index  meta.json
data/01JSQKBXMJZ4RHVCWWH8JVH4C2/chunks/: 000001
data/audio/explorations/: analysis_20250425_121734.json  analysis_20250425_125036.json  sacred_flower_20250425_114454_v00.json  sacred_flower_20250425_114454_v01.json  sacred_flower_20250425_114454_v02.json  sacred_flower_20250425_114454_v03.json  sacred_flower_20250425_114454_v04.json  sacred_flower_20250425_121324_v00.json  sacred_flower_20250425_121324_v03.json  sacred_metatron_20250425_114454_v00.json  sacred_metatron_20250425_114454_v02.json  sacred_metatron_20250425_114454_v03.json  sacred_metatron_20250425_114454_v04.json  sacred_metatron_20250425_121324_v00.json  sacred_metatron_20250425_121324_v01.json  sacred_metatron_20250425_121324_v02.json  sacred_metatron_20250425_121324_v03.json  sacred_metatron_20250425_121324_v04.json  sacred_vesica_20250425_114454_v00.json  sacred_vesica_20250425_114454_v01.json  sacred_vesica_20250425_114454_v02.json  sacred_vesica_20250425_114454_v03.json  sacred_vesica_20250425_114454_v04.json  sacred_vesica_20250425_121324_v00.json  sacred_vesica_20250425_121324_v01.json  sacred_vesica_20250425_121324_v02.json  sacred_vesica_20250425_121324_v03.json  sacred_vesica_20250425_121324_v04.json
data/audiovis/: frame_000.txt  frame_000_params.json  frame_001.txt  frame_001_params.json  frame_002.txt  frame_002_params.json  frame_003.txt  frame_003_params.json  frame_004.txt  frame_004_params.json  frame_005.txt  frame_005_params.json  frame_006.txt  frame_006_params.json  frame_007.txt  frame_007_params.json  frame_008.txt  frame_008_params.json  frame_009.txt  frame_009_params.json  frame_010.txt  frame_010_params.json  frame_011.txt  frame_011_params.json  frame_012.txt  frame_012_params.json  frame_013.txt  frame_013_params.json  frame_014.txt  frame_014_params.json  frame_015.txt  frame_015_params.json  frame_016.txt  frame_016_params.json  frame_017.txt  frame_017_params.json  frame_018.txt  frame_018_params.json  frame_019.txt  frame_019_params.json  (+80 more)
data/audiovis/complex/: frame_000.txt  frame_0004.txt  frame_000_params.json  frame_001.txt  frame_0019.txt  frame_001_params.json  frame_002.txt  frame_002_params.json  frame_003.txt  frame_003_params.json  frame_004.txt  frame_0044.txt  frame_004_params.json  frame_005.txt  frame_005_params.json  frame_006.txt  frame_006_params.json  frame_007.txt  frame_007_params.json  frame_008.txt  frame_008_params.json  frame_009.txt  frame_009_params.json  frame_010.txt  frame_0107.txt  frame_010_params.json  frame_011.txt  frame_0119.txt  frame_011_params.json  frame_012.txt  frame_012_params.json  frame_013.txt  frame_013_params.json  frame_014.txt  frame_014_params.json  frame_015.txt  frame_015_params.json  frame_016.txt  frame_016_params.json  frame_017.txt  (+324 more)
data/chunks_head/: 000007
data/wal/: 00000004  00000005  00000006  00000007
data/wal/checkpoint.00000003/: 00000000
docs/: index.md
docs/development/: architecture.md
docs/features/: audiovis.md
docs/research/: context.md
examples/: distributed_inference_example.py  future_directions.py
examples/automata/: evolution_demo.py
examples/embeddings/: word_embeddings_demo.py
examples/manifold/: manifold_learning.py  recursive_reduction_example.py
examples/visualization/: advanced_hypertools_example.py  advanced_shape_example.py  advanced_symbolic_example.py  ascii_example.py  example_visualizations.py  semantic_tree_example.py  shape_visualization.py
nb/: Gemma3_(4B).ipynb
ritual_outputs/True Will Discovery_20250424_182156/: ritual_intent.txt
ritual_outputs/True Will Discovery_20250424_182156/liber_aleph/: extracted_text.txt  structured_chapters.json  term_contexts.json  term_relationships.json
scripts/: check_audio.py  explore_resonance.py  generate_test_audio.py  generate_umap_canvas.py  generate_word_mandelbrot.py  manage_ray_workers.py  sacred_audio.py  sacred_audio_explorer.py  sacred_audiovis.py  sacred_audiovis_complex.py  sacred_audiovis_job.py  start_ray_cluster.py  test_ascii.py  test_cluster.py  test_three.py  watch_cluster.py
src/word_manifold/: __init__.py  __main__.py  cli.py  types.py
src/word_manifold/api/: __init__.py  client.py  openapi.yaml
src/word_manifold/automata/: __init__.py  additional_rules.py  cellular_rules.py  hermetic_principles.py  hexagram_rules.py  system.py
src/word_manifold/cli/: __init__.py
src/word_manifold/cloud/: ray_cloud.py
src/word_manifold/config/: settings.py
src/word_manifold/core/: audio.py  model_host.py
src/word_manifold/discovery/: resonance_network.py
src/word_manifold/embeddings/: __init__.py  distributed_term_manager.py  phrase_embeddings.py  term_manager.py  word_embeddings.py
src/word_manifold/examples/: __init__.py  force_field_demo.py  hyperdimensional_ritual.py  ritual_evolution.py  thelemic_evolution.py  (+1 more)
terraform/: main.tf
test_outputs/generation_0001/: metadata.json
tests/: conftest.py  test_agent_timeseries.py  test_automata.py  test_core_components.py  test_pattern_selection.py  test_ritual_visualizer.py  test_semantic_tree_visualizer.py  test_visualization.py  test_word_embeddings.py
visualizations/ascii/: field_mystical.txt  field_runic.txt  mandala_mystical.txt  wave_cyberpunk.txt  wave_cyberpunk_animation.txt
(+74 files in other folders)
