[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "word-manifold"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A package for embedding and analyzing text in semantic manifolds"
readme = "README.md"
requires-python = ">=3.9"
 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.2",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "spacy>=3.7.4",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "plotly>=6.0.1",
    "networkx>=3.2.1",
    "nltk>=3.9.1",
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "safetensors>=0.5.3",
    "huggingface-hub>=0.30.2",
    "dash>=3.0.3",
    "librosa>=0.11.0",
    "sentence-transformers>=2.5.1"
]

[project.scripts]
word-manifold = "word_manifold.visualization.cli:cli"
word-manifold-visualize = "word_manifold.visualization.cli:visualize"
word-manifold-animate = "word_manifold.visualization.cli:animate_ritual"
word-manifold-serve = "word_manifold.visualization.cli:serve"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.2.0",
    "mypy>=1.15.0"
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true 