[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "word-manifold"
version = "0.1.0"
description = "Semantic manifold analysis with distributed inference"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core dependencies
    "numpy>=2.0.2,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "click>=8.1.8,<9.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "z3-solver>=4.12.0,<5.0.0",
    "llama-cpp-python>=0.2.0,<1.0.0",
    "sentence-transformers>=2.5.1,<3.0.0",
    "llama-stack-client>=0.1.0,<1.0.0",
    "ray>=2.44.1",
    "matplotlib>=3.9.4,<4.0.0",
    "spacy>=3.7.4,<4.0.0",
]

[project.optional-dependencies]
# Machine learning and embeddings
ml = [
    "torch>=2.6.0,<3.0.0",
    "transformers>=4.51.3,<5.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "sentence-transformers>=2.5.1,<3.0.0",
    "safetensors>=0.5.3,<1.0.0",
    "huggingface-hub>=0.30.2,<1.0.0",
]

# Data processing and analysis
data = [
    "pandas>=2.2.3,<3.0.0",
    "nltk>=3.9.1,<4.0.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
    "tqdm>=4.67.1,<5.0.0",
]

# Visualization dependencies
viz = [
    "matplotlib>=3.9.4,<4.0.0",
    "seaborn>=0.13.2,<1.0.0",
    "plotly>=6.0.1,<7.0.0",
    "networkx>=3.2.1,<4.0.0",
    "dash>=3.0.3,<4.0.0",
    "hypertools>=0.8.0",
]

# Development dependencies
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pylint>=3.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

# Full installation with all dependencies
all = [
    "word-manifold[ml,data,viz]",
]

[project.scripts]
word-manifold = "word_manifold.cli:cli"
word-manifold-explore = "word_manifold.cli:explore"
word-manifold-visualize = "word_manifold.cli:visualize"
word-manifold-agent = "word_manifold.cli:agent_explore"
word-manifold-agent-path = "word_manifold.cli:agent_path"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=word_manifold --cov-report=term-missing"

